objects/ASI_CRM_Calculated_Payment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipName>ASI_CRM_Calculated_FOC_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer (Parent)</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>Calculated_FOC_Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>Calculated_FOC_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_Number__c</fullName>
        <formula>VALUE(ASI_CRM_Year__c)*100+ VALUE(  TEXT(ASI_CRM_Month__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Incentive</fullName>
                </value>
                <value>
                    <fullName>Other Incentive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Customer_Branch__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_MY_Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Parent_Outlet_ID__c</fullName>
        <formula>ASI_CRM_Customer__r.ASI_CRM_CN_Parent_Outlet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Outlet ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reward_Method__c</fullName>
        <label>Reward Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quantum</fullName>
                </value>
                <value>
                    <fullName>Porate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Payment__c</fullName>
        <label>Total Payment</label>
        <summarizedField>ASI_CRM_Calculated_Payment_Item__c.ASI_CRM_Cash__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Calculated_Payment_Item__c.ASI_CRM_Calculated_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Used_By_Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Used By Payment Request</label>
        <referenceTo>ASI_TH_CRM_PaymentRequest__c</referenceTo>
        <relationshipLabel>Calculated Payments</relationshipLabel>
        <relationshipName>Calculated_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Used_for_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used for Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Calculated Payment</label>
    <nameField>
        <displayFormat>CPMT-{00000000}</displayFormat>
        <label>Calculated Payment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated Payments</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Calculated_FOC_Payment_Type</fullName>
        <active>true</active>
        <label>MY Calculated Payment Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>